[package]
name = "stacktoken"
version = "0.0.1"
authors = ["Maicon Souza <mikhael.social@proton.me>"]
edition = "2021"
publish = false

[lib]
path = "src/stacktoken.rs"

[dependencies.multiversx-sc]
version = "0.58.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.58.0"

[workspace]
members = [
    ".",
    "meta",
    "interactor",
]
